added font awesome icons

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>
-        <i class="fa-regular fa-hand-spock"></i> Rock Paper Spock!
+        <i class="fa-regular fa-hand-back-fist"></i><i class="fa-solid fa-toilet-paper"></i><i class="fa-regular fa-hand-spock"></i> Rock Paper Spock!
     </h1>
 </body>
 <script src="https://kit.fontawesome.com/602c42d7e5.js" crossorigin="anonymous"></script>
