--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="assets/css/style.css" rel="stylesheet">
     <title>Rock Paper Spock</title>
 </head>
 <body>
@@ -12,4 +13,6 @@
     </h1>
 </body>
 <script src="https://kit.fontawesome.com/602c42d7e5.js" crossorigin="anonymous"></script>
+<script href="assets/js/script.js"></script>
+<noscript>Sorry your browser does not support javascript!</noscript>
 </html>
