added rules area, game area and controls area divs

--- a/index.html
+++ b/index.html
@@ -12,8 +12,14 @@
     <h1>
         <i class="fa-regular fa-hand-back-fist"></i><i class="fa-solid fa-toilet-paper"></i><i class="fa-regular fa-hand-spock"></i> Rock Paper Spock!
     </h1>
+    <div class="rules-pop-up">Rules 
+      <div>
+        <p>This is just like any other game of Rock, Paper scissors...</p>
+        <p>Except you've got Spock and Lizard!</p>
+        <p>The rules are </p>
+      </div>
+    </div>
 </body>
 <script src="https://kit.fontawesome.com/602c42d7e5.js" crossorigin="anonymous"></script>
-<script href="assets/js/script.js"></script>
-<noscript>Sorry your browser does not support javascript!</noscript>
+<script src="assets/js/script.js"></script>
 </html>
