--- a/index.html
+++ b/index.html
@@ -14,11 +14,24 @@
     </h1>
     <div class="rules-pop-up">Rules 
       <div>
-        <p>This is just like any other game of Rock, Paper scissors...</p>
-        <p>Except you've got Spock and Lizard!</p>
-        <p>The rules are </p>
       </div>
     </div>
+
+    <div class="game-area">
+     <div class="controls-area">
+       <button id="rock"></button>
+       <button id="paper"></button>
+       <button id="scissors"></button>
+       <button id="lizard"></button>
+       <button id="spock"></button>
+     </div>
+    </div>
+
+    <div class="score-area">
+      <p>Player Wins:</p>
+      <p>Computer Wins:</p>
+    </div>
+
 </body>
 <script src="https://kit.fontawesome.com/602c42d7e5.js" crossorigin="anonymous"></script>
 <script src="assets/js/script.js"></script>
