added styling to buttons

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 
     <div class="game-area">
      <div class="controls-area">
-       <button id="rock"></button>
-       <button id="paper"></button>
-       <button id="scissors"></button>
-       <button id="lizard"></button>
-       <button id="spock"></button>
+       <button class="btn" id="rock">rock</button>
+       <button class="btn" id="paper">paper</button>
+       <button class="btn" id="scissors">scissors</button>
+       <button class="btn" id="lizard">lizard</button>
+       <button class="btn"id="spock">spock</button>
      </div>
     </div>
 
