added styling to the score area

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     </div>
 
     <div class="score-area">
-      <p>Player Wins:</p>
-      <p>Computer Wins:</p>
+      <p class="scores">Player Wins:</p>
+      <p class="scores">Computer Wins:</p>
     </div>
 
 </body>
