added box shadowing to game area and border around results

--- a/index.html
+++ b/index.html
@@ -19,11 +19,16 @@
 
     <div class="game-area">
      <div class="controls-area">
-       <button class="btn" id="rock">rock</button>
-       <button class="btn" id="paper">paper</button>
-       <button class="btn" id="scissors">scissors</button>
-       <button class="btn" id="lizard">lizard</button>
-       <button class="btn"id="spock">spock</button>
+       <button class="btn" id="rock"></button>
+       <button class="btn" id="paper"></button>
+       <button class="btn" id="scissors"></button>
+       <button class="btn" id="lizard"></button>
+       <button class="btn"id="spock"></button>
+     </div>
+     <div id="results">
+      <p>You chose:</p>
+      <p>Computer chose:</p>
+      <p>__ Wins!</p>
      </div>
     </div>
 
@@ -31,7 +36,6 @@
       <p class="scores">Player Wins:</p>
       <p class="scores">Computer Wins:</p>
     </div>
-
 </body>
 <script src="https://kit.fontawesome.com/602c42d7e5.js" crossorigin="anonymous"></script>
 <script src="assets/js/script.js"></script>
