adding stylin to modal

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </h1>
     <!--rules pop up-->
       <section class="modal hidden">
-        <div>
+        <div class="flex">
           <button class="button-close">X</button>
         </div>
         <div>
