more styling to modal

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!--rules pop up-->
       <section class="modal hidden">
         <div class="flex">
-          <button class="button-close">X</button>
+          <button id="button1" class="button-close">X</button>
         </div>
         <div>
           <h2>Rules</h2>
