added rules into the modal

--- a/index.html
+++ b/index.html
@@ -18,13 +18,28 @@
         <div class="flex">
           <button id="button1" class="button-close">X</button>
         </div>
-        <div>
-          <h2>Rules</h2>
-          <p>These are the rules</p>
+        <div id="rules">
+           <h2>How to play</h2>
+           <br>
+           <h2>This is a game similar to Rock, Paper, Scissors but with a lizard and star trek's spock added in..</h2>
+           <br>
+           <p>These are the rules:</p>
+           <p>Scissors cuts Paper</p>
+           <p>Paper covers Rock</p>
+           <p>Rock crushes Lizard</p>
+           <p>Lizard poisons Spock</p>
+           <p>Spock smashes Scissors</p>
+           <p>Scissors decapitates Lizard</p>
+           <p>Lizard eats Paper</p>
+           <p>Paper disproves Spock</p>
+           <p>Spock vaporizes Rock</p>
+           <p>Rock crushes Scissors</p>
+           <br>
+           <h2>Click the icon to choose your variable, the computer will then pick it's own variable and the winner will be revealed. The first to win 5 rounds is the victor!</h2>
         </div>
       </section>
    <div class="overlay-hidden"></div>
- <button class="button button-open">Open modal</button>
+ <button class="button button-open">How to play</button>
 <!--game area-->
     <div class="game-area">
      <div class="controls-area">
