removed overlay function

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <h1>
         <i class="fa-regular fa-hand-back-fist"></i><i class="fa-solid fa-toilet-paper"></i><i class="fa-regular fa-hand-spock"></i> Rock Paper Spock!
     </h1>
+    <button class="button button-open">How to play</button>
     <!--rules pop up-->
       <section class="modal hidden">
         <div class="flex">
@@ -37,9 +38,8 @@
            <br>
            <h2>Click the icon to choose your variable, the computer will then pick it's own variable and the winner will be revealed. The first to win 5 rounds is the victor!</h2>
         </div>
+      </div>
       </section>
-   <div class="overlay-hidden"></div>
- <button class="button button-open">How to play</button>
 <!--game area-->
     <div class="game-area">
      <div class="controls-area">
