added ids to the results area for output of choices

--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
        <button class="btn"id="spock"></button>
      </div>
      <div id="results">
-      <p>You chose:</p>
-      <p>Computer chose:</p>
-      <p>__ Wins!</p>
+      <h3 class="choice-results" id="player-choice">You chose:</h3>
+      <h3 class="choice-results" id="computer-choice">Computer chose:</h3>
+      <h3 class="choice-results" id="result-text">Result: </h3>
      </div>
     </div>
 
