added event listeners for control buttons

--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
 <!--game area-->
     <div class="game-area">
      <div class="controls-area">
-       <button class="btn" id="rock"></button>
-       <button class="btn" id="paper"></button>
-       <button class="btn" id="scissors"></button>
-       <button class="btn" id="lizard"></button>
-       <button class="btn"id="spock"></button>
+       <button class="btn" id="rock">rock</button>
+       <button class="btn" id="paper">paper</button>
+       <button class="btn" id="scissors">scissors</button>
+       <button class="btn" id="lizard">lizard</button>
+       <button class="btn"id="spock">spock</button>
      </div>
      <div id="results">
       <h3 class="choice-results" id="player-choice">You chose:</h3>
