added spans to the score area to hold scores

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
     </div>
 
     <div class="score-area">
-      <p class="scores">Player Wins:</p>
-      <p class="scores">Computer Wins:</p>
+      <p class="scores">Player Wins: <span id="player-wins"></span></p>
+      <p class="scores">Computer Wins:<span id="computer-wins"></span></p>
     </div>
 </body>
 <script src="https://kit.fontawesome.com/602c42d7e5.js" crossorigin="anonymous"></script>
