added score incrementing to the page

--- a/index.html
+++ b/index.html
@@ -51,14 +51,16 @@
      </div>
      <div id="results">
       <h3 class="choice-results" id="player-choice">You chose:</h3>
+      <br>
       <h3 class="choice-results" id="computer-choice">Computer chose:</h3>
+      <br>
       <h3 class="choice-results" id="result-text">Result: </h3>
      </div>
     </div>
 
+    
     <div class="score-area">
-      <p class="scores">Player Wins: <span id="player-wins">0</span></p>
-      <p class="scores">Computer Wins:<span id="computer-wins">0</span></p>
+      <span>:</span>
     </div>
 </body>
 <script src="https://kit.fontawesome.com/602c42d7e5.js" crossorigin="anonymous"></script>
