added player spans above incremented score div and media queries

--- a/index.html
+++ b/index.html
@@ -57,7 +57,11 @@
       <h3 class="choice-results" id="result-text">Result: </h3>
      </div>
     </div>
-
+    <div>
+      <span class="players" id="player">Player</span>
+      <span class="players">|</span>
+      <span class="players" id="computer">Computer</span>
+    </div>
     
     <div class="score-area">
       <span>:</span>
