--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
 <!--game area-->
     <div class="game-area">
      <div class="controls-area">
-       <button class="btn" id="rock">rock</button>
-       <button class="btn" id="paper">paper</button>
-       <button class="btn" id="scissors">scissors</button>
-       <button class="btn" id="lizard">lizard</button>
-       <button class="btn"id="spock">spock</button>
+       <button class="btn" id="rock">Rock</button>
+       <button class="btn" id="paper">Paper</button>
+       <button class="btn" id="scissors">Scissors</button>
+       <button class="btn" id="lizard">Lizard</button>
+       <button class="btn"id="spock">Spock</button>
      </div>
      <div id="results">
       <h3 class="choice-results" id="player-choice">You chose:</h3>
