added link to the home page on about page logo

--- a/about.html
+++ b/about.html
@@ -10,9 +10,9 @@
 </head>
 <body>
   <!--header-->
-    <h1>
-        <i class="fa-regular fa-hand-back-fist"></i><i class="fa-solid fa-toilet-paper"></i><i class="fa-regular fa-hand-spock"></i> Rock Paper Spock!
-    </h1>
+  <a href="index.html" id="logo"><h1>
+    <i class="fa-regular fa-hand-back-fist"></i><i class="fa-solid fa-toilet-paper"></i><i class="fa-regular fa-hand-spock"></i> Rock Paper Spock!
+</h1></a>
     <a href="index.html" class="button" id="home-btn">Home</a>
     
     <div class="about-area">
