added styling to the about page form

--- a/about.html
+++ b/about.html
@@ -37,15 +37,16 @@
          <p class="error confirm-password-error"></p>
          <!--Subscribe to our mailing list-->
          <div class="mailing-list">
+          <p id="mailing-list-qs">Would you to like to subscribe to our mailing list?</p>
            <p>
-            <input type="radio" name="mailing" value="yes"> <span>Yes</span>
+            <input type="radio" name="mailing" value="yes" id="ye"> <span>Yes</span>
            </p>
            <p>
-            <input type="radio" name="mailing" value="no"> <span>No</span>
+            <input type="radio" name="mailing" value="no" id="no"> <span>No</span>
            </p>
          </div>
          <!--Submit button-->
-         <input type="submit" name="register-submission" value="sign-up">
+         <input type="submit" name="register-submission" value="sign-up" id="submit-btn">
          <p class="error register-error"></p>
       </form>
     </div>
