--- a/about.html
+++ b/about.html
@@ -19,7 +19,16 @@
       <h2>Sign up here to keep up to date with what great games we have coming out in the future!</h2>
       <form name="register-form" action="" method="post">
         	<label>Enter your email</label>
-          <input>
+          <input type="text" name="email">
+          <p class="error email-error"></p>
+
+          <label>Enter a Username</label>
+          <input type="text" name="username">
+          <p class="error username-error"></p>
+
+          <label>Enter a Password</label>
+          <input type="text" name="Password">
+          <p class="error password-error"></p>
      </form>
     </div>
 </body>
