added no script tag and description and keyword tags

--- a/about.html
+++ b/about.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Rock, paper, scissors, lizard, spock game">
+    <meta name="keywords" content="Rock, paper, scissors, lizard, spock, game, fun, big bang theory">
     <link rel="shortcut icon" type="image/png" href="/assets/images/spock.png">
     <link href="assets/css/style.css" rel="stylesheet">
     <title>Rock Paper Spock</title>
@@ -16,7 +18,7 @@
     <a href="index.html" class="button" id="home-btn">Home</a>
     
     <div class="about-area">
-      <form name="register-form" action="" method="post">
+      <form name="signup-form" action="" method="post">
         <h2>Sign up here to keep up to date with what great games we have coming out in the future!</h2>
         <label>Enter email</label>
         <input type="text" name="email">
@@ -37,5 +39,6 @@
     </div>
 </body>
 <script src="https://kit.fontawesome.com/602c42d7e5.js" crossorigin="anonymous"></script>
+<noscript>Sorry your browser does not support javascript!</noscript>
 <script src="assets/js/about.js"></script>
 </html>
