--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Rock, paper, scissors, lizard, spock game">
+    <meta name="keywords" content="Rock, paper, scissors, lizard, spock, game, fun, big bang theory">
     <link rel="shortcut icon" type="image/png" href="/assets/images/spock.png">
     <link href="assets/css/style.css" rel="stylesheet">
     <title>Rock Paper Spock</title>
@@ -72,4 +74,5 @@
 </body>
 <script src="https://kit.fontawesome.com/602c42d7e5.js" crossorigin="anonymous"></script>
 <script src="assets/js/script.js"></script>
+<noscript>Sorry your browser does not support javascript!</noscript>
 </html>
