began writing the read me

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <a href="index.html" id="logo"><h1>
         <i class="fa-regular fa-hand-back-fist"></i><i class="fa-solid fa-toilet-paper"></i><i class="fa-regular fa-hand-spock"></i> Rock Paper Spock!
     </h1></a>
-    <a href="about.html" class="button" id="about-btn">About</a>
+    <a href="about.html" class="button" id="about-btn">Sign Up</a>
     <button class="button button-open">How to play</button>
     <!--rules pop up-->
       <section class="modal hidden">
