--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Rock, paper, scissors, lizard, spock game">
     <meta name="keywords" content="Rock, paper, scissors, lizard, spock, game, fun, big bang theory">
-    <link rel="shortcut icon" type="image/png" href="/assets/images/spock.png">
+    <link rel="shortcut icon" type="image/png" href="spock.png">
     <link href="assets/css/style.css" rel="stylesheet">
     <title>Rock Paper Spock</title>
 </head>
@@ -17,7 +17,8 @@
 </h1></a>
     <a href="index.html" class="button" id="home-btn">Home</a>
     <div class="about-area">
-      <form name="signup-form" action="" method="post">
+      <!--Added the code institute form dump-->
+      <form name="signup-form" action="https://formdump.codeinstitute.net/" method="post">
         <h2>Sign up here to keep up to date with what great games we have coming out in the future!</h2>
         <label>Enter email</label>
         <input type="text" name="email">
