--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Rock, paper, scissors, lizard, spock game">
     <meta name="keywords" content="Rock, paper, scissors, lizard, spock, game, fun, big bang theory">
-    <link rel="shortcut icon" type="image/png" href="/assets/images/spock.png">
+    <link rel="shortcut icon" type="image/png" href="spock.png">
     <link href="assets/css/style.css" rel="stylesheet">
     <title>Rock Paper Spock</title>
 </head>
