added an alert to tell the player who has won the game

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
            <p>Rock crushes Scissors</p>
            <br>
            <h2>Click the icon to choose your variable, the computer will then pick it's own variable and the winner will be revealed</h2>
+           <h2>The first to 5 wins is the victor!</h2>
         </div>
       </div>
       </section>
