added a footer to the page

--- a/404.html
+++ b/404.html
@@ -35,6 +35,6 @@
             <a href="/">Check our home page</a>
         </p>
     </main>
-    
+    <footer>Mc Daid Games <i class="fa-solid fa-hand-fist"></i> inc. 2022</footer>
 </body>
 </html>
