--- a/about.html
+++ b/about.html
@@ -35,6 +35,7 @@
         <button type="submit" name="submit">Submit</button>	
      </form>
     </div>
+    <footer>Mc Daid Games <i class="fa-solid fa-hand-fist"></i> inc. 2022</footer>
 </body>
 <script src="https://kit.fontawesome.com/602c42d7e5.js" crossorigin="anonymous"></script>
 <noscript>Sorry your browser does not support javascript!</noscript>
