--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
     <div class="score-area">
       <span>:</span>
     </div>
+    <footer>Mc Daid Games <i class="fa-solid fa-hand-fist"></i> inc. 2022</footer>
 </body>
 <script src="https://kit.fontawesome.com/602c42d7e5.js" crossorigin="anonymous"></script>
 <script src="assets/js/script.js"></script>
