added some comments on code sources

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </h1></a>
     <a href="about.html" class="button" id="about-btn">Sign Up</a>
     <button class="button button-open">How to play</button>
-    <!--rules pop up-->
+    <!--rules pop up modal code inspired by free code camp-->
       <section class="modal hidden">
         <div class="flex">
           <button id="button1" class="button-close">X</button>
